# nanodbc

./: .appveyor.yml  .buildinfo  .clang-format  .codecov.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .rstcheck.cfg  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  Doxyfile  Makefile  README.md  Vagrantfile  api.html  appveyor.yml  build.bat  config.yml  develop.html  docker-compose.yml  genindex.html  index.html  install.html  launch.vs.json  objects.inv  search.html  searchindex.js  use.html
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: analyse.yml  analysis.yml  ci-linux.yml  ci-windows.yml  clang-format.yml  docker.yml  docs.yml  documentation.yml  flawfinder.yml  lint-clang-format.yml  lint-docker.yml  lint-documentation.yml  lint-markdown.yml  lint.yml  markdown.yml  pages.yml
_includes/: after.cpp
_sources/: develop.rst.txt  index.rst.txt
doc/: .doctor-rst.yaml  Makefile  README.md  about.rst  api.rst  build.py  conf.py  develop.rst  index.rst  install.rst  make.bat  requirements.txt  use.rst
doctrees/: index.doctree  install.doctree
doxygen/: annotated.html  classes.html  classnanodbc_1_1catalog-members.html  classnanodbc_1_1catalog.html  classnanodbc_1_1catalog_1_1columns-members.html  classnanodbc_1_1catalog_1_1columns.html  classnanodbc_1_1catalog_1_1primary__keys-members.html  classnanodbc_1_1catalog_1_1primary__keys.html  classnanodbc_1_1catalog_1_1table__privileges.html  classnanodbc_1_1catalog_1_1tables-members.html  classnanodbc_1_1catalog_1_1tables.html  classnanodbc_1_1connection-members.html  classnanodbc_1_1connection.html  classnanodbc_1_1database__error-members.html  classnanodbc_1_1database__error.html  classnanodbc_1_1index__range__error-members.html  classnanodbc_1_1index__range__error.html  classnanodbc_1_1null__access__error-members.html  classnanodbc_1_1null__access__error.html  classnanodbc_1_1programming__error-members.html  classnanodbc_1_1programming__error.html  classnanodbc_1_1result-members.html  classnanodbc_1_1result.html  classnanodbc_1_1result__iterator-members.html  classnanodbc_1_1result__iterator.html  classnanodbc_1_1statement-members.html  classnanodbc_1_1statement.html  classnanodbc_1_1transaction-members.html  classnanodbc_1_1transaction.html  classnanodbc_1_1type__incompatible__error-members.html  classnanodbc_1_1type__incompatible__error.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  examples.html  files.html  footer.html  functions.html  functions_0x7e.html  functions_enum.html  functions_eval.html  (+47 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.html  all_62.js  all_63.html  all_63.js  all_64.html  all_65.js  all_66.html  all_67.html  all_68.html  all_69.html  all_69.js  all_6d.html  all_6e.html  all_6e.js  all_6f.html  all_6f.js  all_70.html  all_70.js  all_72.html  all_72.js  all_73.html  all_73.js  all_74.html  all_74.js  all_7e.html  all_8.js  all_a.js  all_b.js  (+87 more)
example/: CMakeLists.txt  empty.cpp.in  example_unicode_utils.h  northwind.cpp  rowset_iteration.cpp  table_schema.cpp  table_valued_parameter.cpp  usage.cpp
example/client/: CMakeLists.txt  nanodbc_client.cpp
examples/: CMakeLists.txt  empty.cpp.in  example_unicode_utils.h  northwind.cpp  rowset_iteration.cpp  table_schema.cpp  usage.cpp
examples/client/: nanodbc_client.cpp
javascripts/: main.js
nanodbc/: nanodbc.cpp  nanodbc.h  variant_row_cached_result.cpp  variant_row_cached_result.h
scripts/: built.bat  style.sh
scripts/appveyor/: configure.bat
scripts/ci/: odbcinst.ini.vertica
scripts/ci/travis/: before_install.osx.sh  before_script.mariadb.sh  before_script.postgresql.sh  before_script.sqlite.sh  (+1 more)
src/: nanodbc.cpp  nanodbc.h
stylesheets/: doxygen.css  highlight.css  slider.css  stylesheet.css  theme.css
test/: CMakeLists.txt  base_test_fixture.h  main.cpp  mssql_test.cpp  mysql_test.cpp  odbc_test.cpp  postgresql_test.cpp  sqlite_test.cpp  test_case_fixture.h  utility_test.cpp  vertica_test.cpp
test/data/: large_binary_object_geometry_wkb.txt
utility/: build.bat  built.bat  changes.sh  format.sh  publish.sh  release.sh  style.sh
utility/ci/: vertica.ini.vertica
utility/vs2017/: CMakeSettings.json  launch.vs.json
v2.12/: Doxyfile  Makefile  index.html
v2.12.4/: config.yml  index.html
v2.12.4/_includes/: before.cpp
v2.12.4/doxygen/: classnanodbc_1_1catalog_1_1table__privileges-members.html  classnanodbc_1_1catalog_1_1tables-members.html  classnanodbc_1_1null__access__error-members.html  classnanodbc_1_1programming__error-members.html  deprecated.html  footer.html  functions_d.html  functions_enum.html  functions_f.html  functions_g.html  functions_l.html  functions_vars.html  globals.html  globals_defs.html  group__bind__multi.html  group__bind__strings.html  group__mainf.html  menudata.js  modules.html  namespacemembers_func.html  nanodbc_8cpp.html  nanodbc_8h_source.html  structnanodbc_1_1date.html  structnanodbc_1_1timestamp.html
v2.12/doxygen/: classnanodbc_1_1catalog-members.html  classnanodbc_1_1connection.html  classnanodbc_1_1index__range__error-members.html  classnanodbc_1_1programming__error.html  classnanodbc_1_1result-members.html  classnanodbc_1_1result__iterator.html  classnanodbc_1_1statement.html  classnanodbc_1_1type__incompatible__error.html  functions_b.html  functions_c.html  functions_e.html  functions_m.html  functions_n.html  functions_p.html  functions_v.html  functions_y.html  group__binding.html  index.html  namespacemembers.html  namespacenanodbc.html  namespaces.html  pages.html  structnanodbc_1_1driver-members.html  structnanodbc_1_1driver_1_1attribute.html  structnanodbc_1_1time.html  structnanodbc_1_1timestamp-members.html
v2.12/stylesheets/: doxygen.css  reset.css  theme.css
v2.13.0/: genindex.html  index.html  install.html  searchindex.js  use.html
v2.13.0/doctrees/: api.doctree  develop.doctree  environment.pickle  use.doctree
(+78 files in other folders)
