add_custom_target(examples DEPENDS examples)
set(examples northwind usage rowset_iteration table_schema)

include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${ODBC_INCLUDE_DIR})
link_directories(${CMAKE_BINARY_DIR}/lib)

foreach(example ${examples})
	add_executable(example_${example} ${example}.cpp example_unicode_utils.h)
	if (NANODBC_STATIC)
		target_link_libraries(example_${example} nanodbc ${ODBC_LIBRARIES})
	else()
		target_link_libraries(example_${example} nanodbc "${ODBC_LINK_FLAGS}")
	endif()
	add_dependencies(examples example_${example})
endforeach()

set(example_empty ${CMAKE_CURRENT_SOURCE_DIR}/empty.cpp)
if(NOT EXISTS ${example_empty}) # Behavior is well-defined only for full paths.
    configure_file(${example_empty}.in ${example_empty} COPYONLY)
endif()
add_executable(example_empty ${example_empty} example_unicode_utils.h)
if (NANODBC_STATIC)
	target_link_libraries(example_empty nanodbc ${ODBC_LIBRARIES})
else()
	target_link_libraries(example_empty nanodbc "${ODBC_LINK_FLAGS}")
endif()
add_dependencies(examples example_empty)
